--- a/tracking_app/templates/tracking_app/base_generic.html
+++ b/tracking_app/templates/tracking_app/base_generic.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}My App{% endblock %}</title>
+    <title>{% block title %}Задачи{% endblock %}</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>{% block content %} {% endblock %}</main>
