--- a/tracking_app/templates/tracking_app/comment_form.html
+++ b/tracking_app/templates/tracking_app/comment_form.html
@@ -1,7 +1,7 @@
-{% extends "tracking_app/base_generic.html" %} {% block title %} Редактировать
-комментарий {%endblock %} {% block content %}
+{% extends "tracking_app/base_generic.html" %} {% block title %}Редактировать
+комментарий{% endblock %} {% block content %}
 <h2>Редактировать комментарий</h2>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit">Сохранить изменения</button>
 </form>
